--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,8 @@ h2{font-size:2rem;color:var(--c-light);font-weight:900}
 .intro-right img{transform:translateX(-50px);display:block}
 .services-left-container {display: flex; max-width:60ch;margin: 0 auto;}
 .services-left {text-align:left;max-width:65ch;font-size:1.25rem;}
-.info-boxes{display:flex;gap:var(--gap-cards);padding:20px var(--pad) 10px;max-width:80vw;margin:0 auto;justify-content:center;align-content:center}
+.home-info-boxes{display:flex;flex-wrap:wrap;flex: 0 0 300;gap:60px;padding:20px var(--pad) 10px;max-width:1200px;margin:0 auto;justify-content:center;align-content:center}
+.service-nav-boxes{display:flex;gap:var(--gap-cards);padding:20px var(--pad) 10px;max-width:80vw;margin:0 auto;justify-content:center;align-content:center}
 .box-with-text{max-width:var(--w-card);display:flex;flex-direction:column;align-items:center}
 .box-head{text-align:center;font-size:1.5rem;width:100%}
 .box-head.service {display: block;max-width:16ch;margin-top:80px;}
